# project-loom

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
examples/llm-router-chronicle/: loom.yaml
loom/: __init__.py  analyzer.py  cli.py  config.py  mcp_server.py  wizard.py  workspace.py
loom/generators/: __init__.py  aider.py  claude_code.py  codex.py  cursor.py  dependency_graph.py  env_setup.py  file_ownership.py  git_context.py  session_templates.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_generators.py  test_workspace.py
